Bug 72187 - FILESAVE: edit filter settings checkbox disabled for a CSV file in the KDE "Save As dialog"
Summary: FILESAVE: edit filter settings checkbox disabled for a CSV file in the KDE "S...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.1.4.2 release
Hardware: Other Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.3.0 target:4.2.1
Keywords: regression
: 72858 (view as bug list)
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2013-11-30 22:28 UTC by remaille
Modified: 2019-01-23 09:47 UTC (History)
9 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description remaille 2013-11-30 22:28:53 UTC
Problem description: In Calc with Kubuntu 13.10, impossible de modify the text separator on a CSV file. The box "edit separator" is grayed out.

Steps to reproduce:
1. Open a CSV file
2. File/Save as
3. Box is grayed out

Current behavior: checkbox "edit separator" is grayed out

Expected behavior: checkbox "edit separator" is NOT grayed out :-)

              
Operating System: Ubuntu
Version: 4.1.2.3 release
Comment 1 Stephan van den Akker 2013-11-30 22:58:42 UTC
Problem confirmed on:
openSuSE 12.3 (64-bit) with KDE 4.10.5 "release 1"
Libre Office Version: 4.1.3.2, Build ID: 410m0(Build:2)

Workaround: 
Go into Tools -> Options from the main menu. 
Under "LibreOffice - General, setting "Open/Save dialogue boxes": 
Tick "Use LibreOffice dialogue boxes".

--> This means that the problem is probably in the KDE integration package.

Problem not present on:
openSuSE 11.4 (32-bit) with KDE 4.6.0 "release 6"
Libre office 3.5:build-403 (Build ID: 350m1(Build:403)

--> So IMHO this qualifies as a regression.

openSuSE 12.3 (64-bit) with KDE 4.10.5 "release 1"
Version: 4.3.0.0.alpha0+ Build ID: 56ad826194d0b9b42ed8bde35836b0e59c46baa6
(git pull on 30 November 2013).
Comment 2 Jorendc 2013-12-01 10:17:12 UTC
I did add 'bibisectrequest'. Stephan did point me to the fact this is KDE only. So this bug is not-bibisectable.

Sorry for the noise, and thanks Stephan.

Kind regards,
Joren
Comment 3 Stephan van den Akker 2013-12-01 10:29:51 UTC
Problem not present on:
Ubuntu 13.10 with Unity
Version: 4.1.2.3, Build ID: 410m0(Build:3)

It certainly points to a KDE integration issue. Adding Luboš Luňák to CC. Maybe he can have a look.
Comment 4 Stephan van den Akker 2013-12-08 21:51:17 UTC
Problem confirmed on openSuSE 12.3 (64-bit) with KDE 4.10.5 "release 1" in:

LibreOfficeDev Version: 4.2.0.0.beta2+ 
Build ID: 09c6257262244456838daf16eb7c034adfeb8fa0

(git pull on 8 December 2013, build with --enable-kde4)
Comment 5 Stephan van den Akker 2014-01-08 20:55:06 UTC
*** Bug 72858 has been marked as a duplicate of this bug. ***
Comment 6 Michael Stahl 2014-02-05 10:59:40 UTC
broken in 4.1.0 release already
Comment 7 Commit Notification 2014-02-06 18:04:42 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a8d102c2406b8c027afb32d61271e0a2c301f133

fdo#72187 Implement KDE4 picker notifications



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2014-02-06 18:05:32 UTC Comment hidden (obsolete)
Comment 9 Commit Notification 2014-02-06 20:29:11 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63950ec72806489b41c2109f5c3840dcf22f4c6c&h=libreoffice-4-2

fdo#72187 Implement KDE4 picker notifications


It will be available in LibreOffice 4.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2014-02-06 20:30:02 UTC Comment hidden (obsolete)
Comment 11 Stephan van den Akker 2014-02-07 11:05:33 UTC
Confirmed fixed on:

openSuSE 11.4 (64-bit) with KDE 4.6.0 "release 6"
LOdev version: 4.3.0.0.alpha0+ Build ID: 375f98d615e7dad8d26d394a95bb46a3a7cf3f0f

LOdev build with -enable-kde4
Comment 12 Stephan van den Akker 2014-02-08 22:27:29 UTC
Confirmed fixed in:
LOdev version: 4.3.0.0.alpha0+ Build ID: dec544be7c929a5c006008ddd3b901f18f4fbbe1
on openSuSE 12.3 (64-bit) with KDE platform Version 4.10.5 "release 1"
Build with --enable-kde4

Thanks for the good work, Jan-Marek!
Comment 13 Stephan van den Akker 2014-02-21 12:40:42 UTC
Confirmed fixed in:
Libre Office Version: 4.2.1.1.0+
Build ID: 47ff82608b065c3c0d98557583bb822b20fb4081
Build with --enable-kde4
Comment 14 Tim Richardson 2019-01-23 03:16:50 UTC
In 2019, I have this problem. KDE Neon, can not select Edit Filter Settings on CSV Save As. Never had this problem before swapping to KDE
Comment 15 Tim Richardson 2019-01-23 03:20:59 UTC
Removing the package "libreoffice-kde5" solves the problem
Comment 16 Jan-Marek Glogowski 2019-01-23 03:45:09 UTC
Personally I would request to open a new report. Let's see how QA wants to handle this.
Comment 17 Xisco Faulí 2019-01-23 09:47:25 UTC
(In reply to Tim Richardson from comment #14)
> In 2019, I have this problem. KDE Neon, can not select Edit Filter Settings
> on CSV Save As. Never had this problem before swapping to KDE

Dear Tim Richardson,
This bug has been in RESOLVED FIXED status for more than 6 months.
If the issue is still reproducible with the latest version of LibreOffice from https://www.libreoffice.org/download/libreoffice-fresh/, please report a new issue in https://bugs.documentfoundation.org/enter_bug.cgi providing, if     needed, the steps and documents to reproduce it.
Thanks for your understanding and collaboration.
Closing as RESOLVED FIXED