fdo#72187 Implement KDE4 picker notifications

This notifies the XFilePickerListener of filter changes and file
selection changes.

(cherry picked from commit a8d102c2406b8c027afb32d61271e0a2c301f133)

Conflicts:

	vcl/unx/kde4/KDE4FilePicker.cxx

Change-Id: I749c5f7420f020a3a2fbb764acb5c45d40972cf1